サイドバーのフロント実装

--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,4 +1,16 @@
 <div class="side_up">
+  <a href="#" class="user_name">Hosaka</a>
+  <a href="#" class="chat_create">チャットを作成する</a>
 </div>
 <div class="side_bottom">
+  <div class="room">
+    <div class="room_name">
+      <a href="#">techroom1</a> 
+    </div>
+  </div>
+  <div class="room">
+    <div class="room_name">
+      <a href="#">techroom2</a>
+    </div>
+  </div> 
 </div>
