--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -11,12 +11,41 @@
 .side_up{
   height: 100px;
   padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user_name{
+  font-size: 16px;
+  color: #FAFAFA;
+  text-decoration: none;
+  display: block;
+}
+
+.chat_create{
+  font-size: 10px;
+  color: deepskyblue;
+  border: 1px solid lightblue;
+  padding: 14px;
+  display: block;
+  text-decoration: none;
 }
 
 .side_bottom{
   background-color: #2F3E51;
   height: calc(100vh - 100px);
   padding: 0 20px;
+  overflow: scroll;
+}
+
+.room{
+  margin: 20px 0 40px 0;
+}
+
+.room_name a {
+  color: white;
+  text-decoration: none;
 }
 
 .main_content{
