--- a/app/views/messages/_side_bar.html.erb
+++ b/app/views/messages/_side_bar.html.erb
@@ -1,16 +1,21 @@
-<div class="side_up">
-  <a href="#" class="user_name">Hosaka</a>
-  <a href="#" class="chat_create">チャットを作成する</a>
+<div class="side-bar-header">
+  <div class="header-name">
+    <a href="#">Tom</a>
+  </div>
+  <div class="create-room">
+    <a href="#">チャットを作成する</a>
+  </div>
 </div>
-<div class="side_bottom">
-  <div class="room">
-    <div class="room_name">
-      <a href="#">techroom1</a> 
+
+<div class="rooms">
+ <div class="room">
+    <div class="room-name">
+      <a href="#">techroom1</a>
     </div>
   </div>
   <div class="room">
-    <div class="room_name">
+    <div class="room-name">
       <a href="#">techroom2</a>
     </div>
-  </div> 
+  </div>
 </div>
